--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   "dependencies": {
     "@actions/core": "^1.4.0",
     "@actions/github": "^5.0.0",
-    "@vercel/ncc": "^0.28.6",
-    "typescript": "^4.3.5"
+    "@vercel/ncc": "^0.28.6"
   },
   "devDependencies": {
-    "@types/node": "12.20.16"
+    "@types/axios": "^0.14.0",
+    "@types/node": "^16.3.2",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "^7.30.0",
+    "typescript": "^4.3.5"
   }
 }
