--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,24 @@
 name: 'VGet'
 description: 'Gets version information from a .csproj file.'
 inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
+  repo-owner:  # id of input
+    description: 'The repository owner.'
     required: true
-    default: 'World'
+  repo-name:
+    description: 'The name of the repository that contains the file.'
+    required: true
+  relative-file-path:
+    description: 'The relative path based on the root of the repository to the project file.'
+    required: true
+  user-name:
+    description: 'The user name for authorization to the repository.'
+    required: true
+  password:
+    description: 'The password for authorization to the repository.'
+    required: true
 outputs:
-  time: # id of output
-    description: 'The time we greeted you'
+  version: # id of output
+    description: 'The version pulled from the project file.'
 runs:
   using: 'node12'
   main: 'dist/index.js'
