Linting rule setup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,15 @@
     "cSpell.words": [
         "CASL",
         "Kinson",
+        "creds",
+        "jsxdev",
+        "linebreak",
+        "nodir",
+        "paren",
+        "parens",
         "postclean",
         "prerebuild",
+        "readonly",
         "repos",
         "vercel",
         "vget"
