--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "vget",
   "type": "module",
   "scripts": {
+    "lint": "eslint . --ext .ts",
     "clean:bin": "node build-process/clean \"bin\"",
     "clean:dist": "node build-process/clean \"dist\"",
     "clean:modules": "node build-process/clean \"modules\"",
@@ -12,7 +13,7 @@
     "prerebuild": "yarn clean:project",
     "rebuild": "yarn build",
     "run:app": "nodemon --config nodemon.json src/main.ts",
-    "publish": "node build-process/publish"
+    "publish:app": "node build-process/publish"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "@actions/core": "^1.4.0",
     "@actions/github": "^5.0.0",
     "@vercel/ncc": "^0.28.6",
+    "axios": "^0.21.1",
     "node": "^16.5.0"
   },
   "devDependencies": {
@@ -37,7 +39,9 @@
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "chalk": "^4.1.1",
+    "cli-progress": "^3.9.0",
     "eslint": "^7.30.0",
+    "glob": "^7.1.7",
     "nodemon": "^2.0.12",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
