Ignore js files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
     "plugins": [
         "@typescript-eslint"
     ],
+    "ignorePatterns": "*.js",
     "rules": {
         "linebreak-style": [
             "error",
