--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "vget",
   "scripts": {
     "lint": "eslint . --ext .ts",
-    "clean:bin": "node build-process/clean \"bin\"",
-    "clean:dist": "node build-process/clean \"dist\"",
-    "clean:modules": "node build-process/clean \"modules\"",
+    "clean:bin": "node build-process/clean.mjs \"bin\"",
+    "clean:dist": "node build-process/clean.mjs \"dist\"",
+    "clean:modules": "node build-process/clean.mjs \"modules\"",
     "clean:project": "if exist \\node_modules (yarn clean:bin && yarn clean:modules)",
-    "build": "node build-process/build-dev",
+    "build": "node build-process/build-dev.mjs",
     "prerebuild": "yarn clean:project",
     "rebuild": "yarn build",
     "run:app": "nodemon --config nodemon.json src/main.ts",
-    "publish:app": "node build-process/publish"
+    "publish:app": "node build-process/publish.mjs"
   },
   "repository": {
     "type": "git",
