--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "CASL",
         "Kinson",
         "creds",
+        "eslinter",
         "jsxdev",
         "linebreak",
         "nodir",
@@ -23,6 +24,9 @@
         "prerebuild",
         "readonly",
         "repos",
+        "transpiled",
+        "transpiles",
+        "transpiling",
         "vercel",
         "vget"
     ],
