--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ inputs:
     description: 'The name of the branch where the file lives.'
     required: true
   file-format:
-    description: 'The type of file that contains the version.  Currently the only supported type is "xml" and is not case sensitive.'
+    description: 'The type of file that contains the version.  Currently the only supported type value is "xml".'
     required: true
   file-path:
     description: 'The path to the file relative to the root of the repository.'
@@ -28,15 +28,15 @@ inputs:
     required: false
     default: 'true'
   fail-on-missing-key:
-    description: 'If true, will fail the action if any of the keys described in the "version-keys" input do not exist.'
+    description: 'If true, will fail the action if any of the keys described in the "version-keys" input do not exist in the file.'
     required: false
     default: 'true'
   fail-on-key-value-mismatch:
     description: 'If true, will fail the action if all of the key values listed in the "version-keys" input do not match.'
     required: false
     default: 'false'
-  fail-with-no-version: # this input is the last input
-    description: 'If true, will fail the action if no version exists.'
+  fail-when-version-not-found: # this input is the last input
+    description: 'If true, will fail the action if the version is not found.'
     required: false
     default: 'true'
 
@@ -67,5 +67,5 @@ runs:
   - ${{ inputs.fail-on-missing-key }}
   - '--fail-on-key-value-mismatch'
   - ${{ inputs.fail-on-key-value-mismatch }}
-  - '--fail-with-no-version'
-  - ${{ inputs.fail-with-no-version }}
+  - '--fail-when-version-not-found'
+  - ${{ inputs.fail-when-version-not-found }}
