Update workflows for documentation folder

--- a/.github/workflows/ignore-build-status-check.yml
+++ b/.github/workflows/ignore-build-status-check.yml
@@ -6,6 +6,7 @@ on:
     types: [ synchronize ]
     paths:
       - ".github/**"
+      - "Documentation/**"
       - '.editorconfig'
       - '*.runsettings'
       - '.gitattributes'
