--- a/.github/workflows/ignore-unit-tests-status-check.yml
+++ b/.github/workflows/ignore-unit-tests-status-check.yml
@@ -6,6 +6,7 @@ on:
     types: [ synchronize ]
     paths:
       - ".github/**"
+      - "Documentation/**"
       - '.editorconfig'
       - '*.runsettings'
       - '.gitattributes'
