--- a/.github/workflows/unit-tests-status-check.yml
+++ b/.github/workflows/unit-tests-status-check.yml
@@ -12,6 +12,7 @@ on:
     types: [ synchronize ]
     paths-ignore:
       - ".github/**"
+      - "Documentation/**"
       - '.editorconfig'
       - '*.runsettings'
       - '.gitattributes'
