--- a/.github/ISSUE_TEMPLATE/bug-issue-template.yml
+++ b/.github/ISSUE_TEMPLATE/bug-issue-template.yml
@@ -47,7 +47,7 @@ body:
 
 - type: textarea
   attributes:
-    label: If you know what version of _**ubuntu**_ the action is running one, enter this here.
+    label: If you know what version of _**ubuntu**_ the action is running on, enter it here.
     description: Enter ubuntu operating system version here
     placeholder: |
       Examples: `ubuntu-latest` or `ubuntu-20.04`
@@ -61,9 +61,8 @@ body:
   attributes:
     label: Anything else?
     description: |
-      Links? References? Anything that will give us more context about the issue you are encountering!
-      
-      Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
+      Links? References? Anything that will give us more context about the issue you are encountering.
+      Add images, log files, or anything else in this text field.
   validations:
     required: false
 
