--- a/.editorconfig
+++ b/.editorconfig
@@ -21,10 +21,10 @@ charset = utf-8-bom
 dotnet_sort_system_directives_first = true
 
 # this. preferences
-dotnet_style_qualification_for_field = false:none
-dotnet_style_qualification_for_property = false:none
-dotnet_style_qualification_for_method = false:none
-dotnet_style_qualification_for_event = false:none
+dotnet_style_qualification_for_field = true:warning
+dotnet_style_qualification_for_property = false:warning
+dotnet_style_qualification_for_method = false:warning
+dotnet_style_qualification_for_event = true:warning
 
 # Language keywords vs BCL types preferences
 dotnet_style_predefined_type_for_locals_parameters_members = true:warning
@@ -80,7 +80,7 @@ dotnet_code_quality_unused_parameters = all:warning
 # var preferences
 csharp_style_var_for_built_in_types = true:warning
 csharp_style_var_when_type_is_apparent = true:warning
-csharp_style_var_elsewhere = false:false
+csharp_style_var_elsewhere = false:none
 
 # Expression-bodied members
 csharp_style_expression_bodied_methods = true:warning
@@ -174,3 +174,6 @@ dotnet_diagnostic.SA0001.severity = none
 
 # SA1200: A C# using directive is placed outside of a namespace element
 dotnet_diagnostic.SA1200.severity = none
+
+# SA1309: A field name in C# begins with an underscore
+dotnet_diagnostic.SA1309.severity = warning
