--- a/action.yml
+++ b/action.yml
@@ -26,15 +26,15 @@ inputs:
   case-sensitive-keys:
     description: 'If true, the key search will be case sensitive.'
     required: false
-    default: 'true'
+    default: true
   fail-on-key-value-mismatch:
     description: 'If true, the action will fail if all of the key values listed in the "version-keys" input do not match.'
     required: false
-    default: 'false'
+    default: false
   fail-when-version-not-found:
     description: 'If true, will fail the action if the version is not found.'
     required: false
-    default: 'true'
+    default: true
 
 outputs:
   version:
