--- a/.github/workflows/unit-tests-status-check.yml
+++ b/.github/workflows/unit-tests-status-check.yml
@@ -1,14 +1,8 @@
 name: ✔Unit Testing Status Check
 
 
-env:
-  PROJECT_NAME: VersionMiner
-  NET_SDK_VERSION: 6.0.300
-
-
 on:
   workflow_dispatch:
-  pull_request:
     paths-ignore:
       - ".github/**"
       - "Documentation/**"
@@ -23,31 +17,29 @@ on:
 
 
 jobs:
-  Unit_Testing_Status_Check:
-    name: Unit Testing Status Check
-    runs-on: windows-latest
+  determine_build_config:
+    name: Determine Build Configuration
+    runs-on: ubuntu-latest
+    outputs:
+      build-config: ${{ steps.get-build-config.outputs.build-config }}
     steps:
-    - uses: actions/checkout@v2
-
     - name: Get Build Config
       id: get-build-config
+      shell: pwsh
       run: |
-        # If the destination branch that the pull request is merging into is master, do a release build
+        # If the destination branch that the pull request is merging into is the master, do a release build
         if ( "${{ github.base_ref }}" -eq "master") {
           Write-Host "::set-output name=build-config::Release"
         } else { # Any other branch than master, do a debug build
           Write-Host "::set-output name=build-config::Debug"
         }
 
-    - name: Setup .NET SDK
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: ${{ env.NET_SDK_VERSION }}
 
-    - name: Restore Dependencies
-      run: dotnet restore "${{ github.workspace }}/${{ env.PROJECT_NAME }}/${{ env.PROJECT_NAME }}.csproj"
-
-    - name: Execute Unit Tests
-      run: dotnet test "${{ github.workspace }}/Testing/${{ env.PROJECT_NAME }}Tests/${{ env.PROJECT_NAME }}Tests.csproj" `
-        -c ${{ steps.get-build-config.outputs.build-config }} `
-        --no-restore
+  run_versionminer_tests:
+    name: Run VersionMiner Tests
+    needs: determine_build_config
+    uses: KinsonDigital/Infrastructure/.github/workflows/unit-testing-status-check.yml@master
+    with:
+      project-name: "VersionMinerTests"
+      build-config: ${{ needs.determine_build_config.outputs.build-config }}
+      net-sdk-version: 6.0.300
