--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
     "cSpell.words": [
+        "cref",
         "Kinson",
+        "paramref",
         "pwsh",
         "runsettings",
-        "versionminer"
+        "typeparam",
+        "versionminer",
+        "Xunit"
     ]
 }
