--- a/.github/ISSUE_TEMPLATE/release-todo-issue-template.yml
+++ b/.github/ISSUE_TEMPLATE/release-todo-issue-template.yml
@@ -21,8 +21,8 @@ body:
     label: Perform Release ToDo List
     description: Complete the following items to perform a release.
     options:
-    - label: "Title updated by replacing the '**_\<TODO: release type here\>_**' section with the type of release."
-    - label: "Title updated by replacing the '**_\<TODO: release version number here\>_**' section with the version number."
+    - label: "Title updated by replacing the '**_<TODO: release type here>_**' section with the type of release."
+    - label: "Title updated by replacing the '**_<TODO: release version number here>_**' section with the version number."
     - label: Appropriate release label added to this issue.  Refer to the _**Release Labels**_ section below.
     - label: Release PR linked to this issue.
     - label: Manual QA Testing completed.
@@ -40,7 +40,7 @@ body:
     label: Post-Release ToDo List
     description: Verify that release went smoothly.
     options:
-    - label: The release displayed in [GitHub Releases](https://github.com/KinsonDigital/VersionMiner/releases) is correct.    
+    - label: The release displayed in [GitHub Releases](https://github.com/KinsonDigital/VersionMiner/releases) is correct.
     - label: The [nuget package](https://www.nuget.org/packages/KinsonDigital.VersionMiner/) has been successfully deployed to the public repository.
     - label: Announcement of release on [Twitter](https://twitter.com/KDCoder) verified. (Announcement should be performed automatically with the release)
     - label: Announcement has been pushed to [Ko-Fi](https://ko-fi.com/kinsondigital).
