ci: change workflow events and ignore paths

--- a/.github/workflows/build-status-check.yml
+++ b/.github/workflows/build-status-check.yml
@@ -1,21 +1,13 @@
 name: ✔Build Status Check
 
+
 env:
   NET_SDK_VERSION: 6.0.300
 
+
 on:
+  pull_request:
   workflow_dispatch:
-    paths-ignore:
-      - ".github/**"
-      - "Documentation/**"
-      - '.editorconfig'
-      - '*.runsettings'
-      - '.gitattributes'
-      - '.gitignore'
-      - '*.md'
-      - '*.yml'
-      - '.vscode/**'
-      - '*.sln'
 
 
 jobs:
