chore: add the secrets file to the .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,6 @@ MigrationBackup/
 /packages/
 riderModule.iml
 /_ReSharper.Caches/
+
+# Ignore secrets file used for CICD build system
+local-secrets.json
