ide: add word to dictionary for VSCode users

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "paramref",
         "pwsh",
         "runsettings",
+        "softprops",
         "typeparam",
         "versionminer",
         "Xunit"
