--- a/.github/workflows/prod-release.yml
+++ b/.github/workflows/prod-release.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    # TODO: Replace this step to pull version using version miner itself once preview.3 has been released
     - name: Get Version
       id: get-version
       run: |
@@ -70,3 +71,24 @@ jobs:
         body_path: "${{ steps.release-notes.outputs.file-path }}"
         files: "${{ steps.release-notes.outputs.file-path }}"
         prerelease: false
+
+
+  publish-code-coverage:
+    runs-on: ubuntu-latest
+    name: Publish Code Coverage Results
+    steps:
+    - uses: actions/checkout@v3
+
+    # TODO: Add step to pull version using version miner itself once preview.3 has been released for the VersionMiner action
+    # Use the version in the publish code coverage results step below as part of the name
+
+    - name: Execute Unit Tests
+      run: dotnet test "${{ github.workspace }}/Testing/VersionMinerTests/VersionMinerTests.csproj" -c Release --collect:"XPlat Code Coverage"
+
+    - uses: codecov/codecov-action@v3
+      name: Publish Code Coverage Results
+      with:
+        directory: "${{ github.workspace }}/Testing/VersionMinerTests/TestResults/"
+        name: "Production Release"
+        fail_ci_if_error: true
+        verbose: true
