--- a/.github/workflows/unit-test-pr-status-check.yml
+++ b/.github/workflows/unit-test-pr-status-check.yml
@@ -22,5 +22,27 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    # TODO: Re-enable this one CICD gets the create code coverage feature
+    # - name: Run Unit Tests
+    #   run: dotnet test "${{ github.workspace }}/Testing/VersionMinerTests/VersionMinerTests.csproj"
+
     - name: Run Unit Tests
-      run: dotnet test "${{ github.workspace }}/Testing/VersionMinerTests/VersionMinerTests.csproj"
+      run: |
+        dotnet test "${{ github.workspace }}/Testing/VersionMinerTests/VersionMinerTests.csproj" -c Debug --collect:"XPlat Code Coverage"
+
+  publish-code-coverage:
+    runs-on: ubuntu-latest
+    name: Publish Code Coverage Results
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Execute Unit Tests
+      run: dotnet test "${{ github.workspace }}/Testing/VersionMinerTests/VersionMinerTests.csproj" -c Release --collect:"XPlat Code Coverage"
+
+    - uses: codecov/codecov-action@v3
+      name: Publish Code Coverage Results
+      with:
+        directory: "${{ github.workspace }}/Testing/VersionMinerTests/TestResults/"
+        name: "PR Status Check"
+        fail_ci_if_error: true
+        verbose: true
