--- a/VersionMiner/VersionMiner.csproj
+++ b/VersionMiner/VersionMiner.csproj
@@ -14,6 +14,12 @@
     <!--Update this for production and preview releases-->
     <FileVersion>1.0.0-preview.3</FileVersion>
 
+    <!--
+      DO NOT UPDATE THIS FOR PREVIEW RELEASES!!
+      Visual Studio does not allow the preview syntax for this tag
+      Example: v1.2.3.preview.1 is not allowed
+    -->
+    <AssemblyVersion>1.0.0</AssemblyVersion>
     <Authors>Calvin Wilkinson</Authors>
     <Company>Kinson Digital</Company>
     <Product>VersionMiner</Product>
