--- a/.github/workflows/build-status-check.yml
+++ b/.github/workflows/build-status-check.yml
@@ -1,17 +1,11 @@
 name: ✅Build Status Check
 
 
-env:
-  NET_SDK_VERSION: 7.0.101
-
 on:
   workflow_dispatch:
   pull_request:
     branches:
-    - develop
     - master
-    - release/v*.*.*
-    - preview/v*.*.*-preview.*
 
 
 jobs:
@@ -32,18 +26,6 @@ jobs:
             "build-config=Debug" >> $env:GITHUB_OUTPUT;
           }
 
-  get_sdk_version:
-    name: Get SDK Version
-    runs-on: ubuntu-latest
-    outputs:
-      sdk-version: ${{ steps.get-sdk-version.outputs.sdk-version }}
-    steps:
-      - name: Get SDK Version From Environment Variable
-        id: get-sdk-version
-        shell: pwsh
-        run: |
-          "sdk-version=${{ env.NET_SDK_VERSION }}" >> $env.GITHUB_OUTPUT;
-
   # Build Main Projects
   build_project:
     name: Build Project
@@ -52,7 +34,7 @@ jobs:
     with:
       project-name: "VersionMiner"
       build-config: ${{ needs.determine_build_config.outputs.build-config }}
-      net-sdk-version: ${{ needs.get_sdk_version.outputs.sdk-version }}
+      net-sdk-version: 7.0.203
 
   build_tests_project:
     name: Build Tests Project
@@ -61,4 +43,4 @@ jobs:
     with:
       project-name: "VersionMinerTests"
       build-config: ${{ needs.determine_build_config.outputs.build-config }}
-      net-sdk-version: ${{ needs.get_sdk_version.outputs.sdk-version }}
+      net-sdk-version: 7.0.203
