--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,33 @@
         "versionminer",
         "Xunit"
     ],
-    "deno.enable": true
+    "deno.enable": true,
+    "dotnet.defaultSolution": "VersionMiner.sln",
+	"[jsonc]": {
+        "editor.indentSize": 4,
+		"editor.insertSpaces": false,
+        "editor.detectIndentation": false,
+    },
+    "[csharp]": {
+        "editor.indentSize": 4,
+		"editor.insertSpaces": false,
+        "editor.detectIndentation": false,
+    },
+	"[yml]": {
+		"editor.indentSize": 2,
+		"editor.insertSpaces": true,
+        "editor.detectIndentation": false,
+    },
+	"rest-client.environmentVariables": {
+		"$shared": {
+			"repoOwner": "KinsonDigital",
+			"githubHostAddress": "https://api.github.com",
+		},
+		"GitHub-CASL": {
+			"hostAddress": "{{$shared githubHostAddress}}",
+			"repoOwner": "{{$shared repoOwner}}",
+			"repoName": "CASL",
+			"milestoneNumber": "7",
+		},
+	},
 }
