ide: added word to dictionary for vscode users

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,17 @@
 {
     "cSpell.words": [
-        "codecov",
-        "cref",
-        "Kinson",
-        "paramref",
-        "pwsh",
-        "runsettings",
-        "softprops",
-        "typeparam",
-        "versionminer",
-        "Xunit"
-    ],
+		"CICD",
+		"codecov",
+		"cref",
+		"Kinson",
+		"paramref",
+		"pwsh",
+		"runsettings",
+		"softprops",
+		"typeparam",
+		"versionminer",
+		"Xunit"
+	],
     "deno.enable": true,
     "dotnet.defaultSolution": "VersionMiner.sln",
 	"[jsonc]": {
