--- a/VersionMiner/VersionMiner.csproj
+++ b/VersionMiner/VersionMiner.csproj
@@ -9,10 +9,10 @@
     <RootNamespace>VersionMiner</RootNamespace>
 
     <!--Update this for production and preview releases-->
-    <Version>1.0.0-preview.5</Version>
+    <Version>1.0.0</Version>
 
     <!--Update this for production and preview releases-->
-    <FileVersion>1.0.0-preview.5</FileVersion>
+    <FileVersion>1.0.0</FileVersion>
 
     <!--
       DO NOT UPDATE THIS FOR PREVIEW RELEASES!!
