--- a/.github/workflows/build-status-check.yml
+++ b/.github/workflows/build-status-check.yml
@@ -4,8 +4,7 @@ name: ✅Build Status Check
 on:
   workflow_dispatch:
   pull_request:
-    branches:
-    - master
+    branches: main
 
 
 jobs:
@@ -19,14 +18,13 @@ jobs:
         id: get-build-config
         shell: pwsh
         run: |
-          # If the destination branch that the pull request is merging into is the master, do a release build
-          if ( "${{ github.base_ref }}" -eq "master") {
+          # If the destination branch that the pull request is merging into is the main, do a release build
+          if ( "${{ github.base_ref }}" -eq "main") {
             "build-config=Release" >> $env:GITHUB_OUTPUT;
-          } else { # Any other branch than master, do a debug build
+          } else { # Any other branch than main, do a debug build
             "build-config=Debug" >> $env:GITHUB_OUTPUT;
           }
 
-  # Build Main Projects
   build_project:
     name: Build Project
     needs: [determine_build_config]
