--- a/.github/workflows/unit-testing-status-check.yml
+++ b/.github/workflows/unit-testing-status-check.yml
@@ -4,8 +4,7 @@ name: ✅Unit Testing Status Check
 on:
   workflow_dispatch:
   pull_request:
-    branches:
-    - master
+    branches: main
 
 
 jobs:
@@ -19,10 +18,10 @@ jobs:
       id: get-build-config
       shell: pwsh
       run: |
-        # If the destination branch that the pull request is merging into is the master, do a release build
-        if ("${{ github.base_ref }}" -eq "master") {
+        # If the destination branch that the pull request is merging into is the main, do a release build
+        if ("${{ github.base_ref }}" -eq "main") {
           "build-config=Release" >> $env:GITHUB_OUTPUT;
-        } else { # Any other branch than master, do a debug build
+        } else { # Any other branch than main, do a debug build
           "build-config=Debug" >> $env:GITHUB_OUTPUT;
         }
 
