--- a/.github/workflows/unit-testing-status-check.yml
+++ b/.github/workflows/unit-testing-status-check.yml
@@ -1,4 +1,5 @@
 name: ✅Unit Testing Status Check
+run-name: ✅Unit Testing Status Check ${{ github.base_ref == 'main' && '(Release Build)' || '(Debug Build)' }}
 
 
 on:
