ci: remove job from status checks

--- a/.github/workflows/build-status-check.yml
+++ b/.github/workflows/build-status-check.yml
@@ -9,29 +9,10 @@ on:
 
 
 jobs:
-  determine_build_config:
-    name: Determine Build Configuration
-    runs-on: ubuntu-latest
-    outputs:
-      build-config: ${{ steps.get-build-config.outputs.build-config }}
-    steps:
-      - name: Get Build Config
-        id: get-build-config
-        shell: pwsh
-        run: |
-          # If the destination branch that the pull request is merging into is the main, do a release build
-          if ( "${{ github.base_ref }}" -eq "main") {
-            "build-config=Release" >> $env:GITHUB_OUTPUT;
-          } else { # Any other branch than main, do a debug build
-            "build-config=Debug" >> $env:GITHUB_OUTPUT;
-          }
-
-
   build_project:
     name: Build Status Check
-    needs: [determine_build_config]
     uses: KinsonDigital/Infrastructure/.github/workflows/build-csharp-project.yml@v8.1.0
     with:
       project-name: ${{ vars.PROJECT_NAME }}
-      build-config: ${{ needs.determine_build_config.outputs.build-config }}
+      build-config: "Debug"
       net-sdk-version: ${{ vars.NET_SDK_VERSION }}
