--- a/.github/workflows/unit-testing-status-check.yml
+++ b/.github/workflows/unit-testing-status-check.yml
@@ -1,37 +1,18 @@
 name: ✅Unit Testing Status Check
+run-name: ✅Unit Testing Status Check ${{ github.base_ref == 'main' && '(Release Build)' || '(Debug Build)' }}
 
 
 on:
   workflow_dispatch:
   pull_request:
-    branches:
-    - master
+    branches: main
 
 
 jobs:
-  determine_build_config:
-    name: Determine Build Configuration
-    runs-on: ubuntu-latest
-    outputs:
-      build-config: ${{ steps.get-build-config.outputs.build-config }}
-    steps:
-    - name: Get Build Config
-      id: get-build-config
-      shell: pwsh
-      run: |
-        # If the destination branch that the pull request is merging into is the master, do a release build
-        if ("${{ github.base_ref }}" -eq "master") {
-          "build-config=Release" >> $env:GITHUB_OUTPUT;
-        } else { # Any other branch than master, do a debug build
-          "build-config=Debug" >> $env:GITHUB_OUTPUT;
-        }
-
-
   run_tests:
-    name: Run Tests
-    needs: determine_build_config
-    uses: KinsonDigital/Infrastructure/.github/workflows/run-csharp-tests.yml@v3.0.2
+    name: Unit Test Status Check
+    uses: KinsonDigital/Infrastructure/.github/workflows/run-csharp-tests.yml@v8.1.0
     with:
-      project-name: "VersionMinerTests"
-      build-config: ${{ needs.determine_build_config.outputs.build-config }}
-      net-sdk-version: 7.0.203
+      project-name: ${{ vars.PROJECT_NAME }}Tests
+      build-config: "Debug"
+      net-sdk-version: ${{ vars.NET_SDK_VERSION }}
