--- a/.github/workflows/unit-test-status-check.yml
+++ b/.github/workflows/unit-test-status-check.yml
@@ -5,13 +5,13 @@ run-name: ✅Unit Testing Status Check ${{ github.base_ref == 'main' && '(Releas
 on:
   workflow_dispatch:
   pull_request:
-    branches: main
+    branches: [main, preview]
 
 
 jobs:
   run_tests:
-    name: Unit Test Status Check
-    uses: KinsonDigital/Infrastructure/.github/workflows/run-csharp-tests.yml@v8.1.0
+    name: ${{ vars.PROJECT_NAME }} Test Status Check
+    uses: KinsonDigital/Infrastructure/.github/workflows/run-csharp-tests.yml@v10.0.0
     with:
       project-name: ${{ vars.PROJECT_NAME }}Tests
       build-config: "Debug"
