ide: update and improve various confgs

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,6 @@
 		"humao.rest-client",
 		"ms-dotnettools.vscodeintellicode-csharp",
 		"ms-dotnettools.csdevkit",
-		"ms-dotnettools.csharp"
+		"ms-dotnettools.vscode-dotnet-runtime"
 	]
 }
