--- a/.github/workflows/unit-test-status-check.yml
+++ b/.github/workflows/unit-test-status-check.yml
@@ -1,9 +1,8 @@
 name: ✅Unit Testing Status Check
-run-name: ✅Unit Testing Status Check ${{ github.base_ref == 'main' && '(Release Build)' || '(Debug Build)' }}
+run-name: ✅Unit Testing Status Check (${{ github.base_ref }} branch)
 
 
 on:
-  workflow_dispatch:
   pull_request:
     branches: [main, preview]
 
