--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,18 +13,18 @@
 		"Xunit"
 	],
     "dotnet.defaultSolution": "VersionMiner.sln",
-	"[csharp]": {
-		"editor.insertSpaces": false,
+    "[csharp]": {
+		"editor.insertSpaces": true,
 		"editor.indentSize": 4,
-	},
-	"[jsonc]": {
-		"editor.insertSpaces": false,
-        "editor.indentSize": 4,
     },
 	"[yaml]": {
 		"editor.insertSpaces": true,
-		"editor.tabSize": 2,
-    },
+		"editor.indentSize": 2,
+	},
+	"[jsonc]": {
+		"editor.insertSpaces": false,
+		"editor.indentSize": 4,
+	},
 	"editor.detectIndentation": false,
 	"[github-actions-workflow]": {
 		"editor.tabSize": 2,
