--- a/.github/workflows/build-status-check.yml
+++ b/.github/workflows/build-status-check.yml
@@ -1,18 +1,17 @@
 name: ✅Build Status Check
-run-name: ✅Build Status Check ${{ github.base_ref == 'main' && '(Release Build)' || '(Debug Build)' }}
+run-name: ✅Build Status Check (${{ github.base_ref }} branch)
 
 
 on:
-  workflow_dispatch:
   pull_request:
-    branches: main
+    branches: [main, preview]
 
 
 jobs:
   build_project:
-    name: Build Status Check
-    uses: KinsonDigital/Infrastructure/.github/workflows/build-csharp-project.yml@v8.1.0
+    name: ${{ vars.PROJECT_NAME }} Build Status Check
+    uses: KinsonDigital/Infrastructure/.github/workflows/build-csharp-project.yml@v10.0.1
     with:
       project-name: ${{ vars.PROJECT_NAME }}
-      build-config: "Debug"
+      build-config: Debug
       net-sdk-version: ${{ vars.NET_SDK_VERSION }}
