--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,10 +7,6 @@ defaults:
     shell: pwsh
 
 
-env:
-  runs-on: ubuntu-latest
-
-
 on:
   workflow_dispatch:
     inputs:
@@ -33,29 +29,9 @@ on:
 
 
 jobs:
-  determine_build_config:
-    name: Determine Build Configuration
-    runs-on: ${{ inputs.runs-on }}
-    outputs:
-      build-config: "${{ steps.get-build-config.outputs.build-config }}"
-    steps:
-      - name: Get Build Config
-        id: get-build-config
-        run: |
-          # If the branch that the workflow is running on is the required branch for the release, do a release build
-          if ( "${{ github.base_ref }}" -eq "main") {
-            "build-config=Release" >> $env:GITHUB_OUTPUT;
-            echo "Release build created.";
-          } else { # Any other branch than the release branch, do a debug build
-            "build-config=Debug" >> $env:GITHUB_OUTPUT;
-            echo "Debug build created.";
-          }
-
-
   perform_release:
-    name: Performing ${{ inputs.release_type }} Release of ${{ vars.PROJECT_NAME }} (${{ needs.determine_build_config.outputs.build-config }})
-    needs: determine_build_config
-    uses: KinsonDigital/Infrastructure/.github/workflows/dotnet-action-release.yml@v8.1.0
+    name: Performing ${{ inputs.release_type }} Release of ${{ vars.PROJECT_NAME }} (${{ inputs.release_type == 'Production' && 'Release' || 'Debug' }})
+    uses: KinsonDigital/Infrastructure/.github/workflows/dotnet-action-release.yml@v10.0.1
     with:
       project-name: "${{ vars.PROJECT_NAME }}"
       release-type: "${{ inputs.release_type }}"
@@ -63,8 +39,7 @@ jobs:
       net-sdk-version: "${{ vars.NET_SDK_VERSION }}"
       relative-release-notes-dir-path: "${{ vars.SCRIPT_RELATIVE_DIR_PATH }}"
       release-notes-file-name-prefix: "${{ vars.RELEASE_NOTES_FILE_NAME_PREFIX }}"
-      build-config: "${{ needs.determine_build_config.outputs.build-config }}"
-      cicd-scripts-version: "${{ vars.CICD_SCRIPTS_VERSION}}"
+      build-config: "${{ inputs.release_type == 'Production' && 'Release' || 'Debug' }}"
       pr-include-notes-label: "${{ vars.PR_INCLUDE_NOTES_LABEL }}"
       runs-on: ${{ inputs.runs-on }}
       dry-run: ${{ inputs.dry-run }}
