--- a/.github/workflows/add-new-issue-to-project.yml
+++ b/.github/workflows/add-new-issue-to-project.yml
@@ -4,7 +4,7 @@ name: 🤖Add New Issue To Project
 on:
   issues:
     types: opened
-  pull_request:
+  pull_request_target:
     types: opened
     branches: [main, preview]
 
