--- a/.github/workflows/build-status-check.yml
+++ b/.github/workflows/build-status-check.yml
@@ -3,7 +3,7 @@ run-name: ✅Build Status Check (${{ github.base_ref }} branch)
 
 
 on:
-  pull_request:
+  pull_request_target:
     branches: [main, preview]
 
 
